[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc-canteen"
version = "0.1.2"
description = "Arc Canteen CLI — track your project's progress and submit to the Arc testnet."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
]

[project.scripts]
arc-canteen = "arc_canteen.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["arc_canteen"]
