[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc-canteen"
version = "0.1.16"
description = "Arc Canteen CLI — track your project's progress and submit to Arc."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://thecanteenapp.com"
Repository = "https://github.com/the-canteen-dev/ARC-cli"
Documentation = "https://docs.arc.io/arc-chain"

[project.scripts]
arc-canteen = "arc_canteen.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["arc_canteen"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
